--- a/web/css/style.css
+++ b/web/css/style.css
@@ -20,7 +20,7 @@ body {
     background-color:  whitesmoke;
     border: 1px solid darkgrey;
     min-height: 4%;
-    text-align: center;
+    text-align: left;
 }
 
 #main {
