start modify struts struts config spring config pages config

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -60,3 +60,20 @@ body {
 .menulist {
     background-color:  white;
 }
+
+.newstable {
+    width: 100%;
+}
+
+.mainrow {
+    width: 70%;
+}
+
+.addrow {
+    width: 30%;
+    text-align: right;
+}
+
+.right {
+    text-align: right;
+}
