--- a/web/css/style.css
+++ b/web/css/style.css
@@ -21,6 +21,7 @@ body {
     border: 1px solid darkgrey;
     min-height: 4%;
     text-align: left;
+    padding: 0px 25px 15px 45px;
 }
 
 #main {
@@ -43,6 +44,14 @@ body {
     float: left;
 }
 
+.leftcontainer {
+    width: 67%;
+    padding: 2%;
+    margin: 1%;
+    float: left;
+    text-align: right;
+}
+
 .bodycontainer {
     width: 67%;
     border: 2px solid lightgrey;
@@ -50,6 +59,13 @@ body {
     margin: 1%;
     float: right;
     background-color:  white;
+}
+.rigthcontainer {
+    width: 20%;
+    padding: 2%;
+    margin: 1%;
+    float: right;
+    text-align: left;
 }
 
 .menuheader {
@@ -63,15 +79,18 @@ body {
 
 .newstable {
     width: 100%;
+    padding: 8px; 
 }
 
 .mainrow {
     width: 70%;
+    padding: 8px; 
 }
 
 .addrow {
     width: 30%;
     text-align: right;
+    padding: 8px; 
 }
 
 .right {
