--- a/web/css/style.css
+++ b/web/css/style.css
@@ -7,7 +7,7 @@ and open the template in the editor.
     Created on : 13.12.2014, 23:49:19
     Author     : Alena.Grouk
 */
-
+/*http://verstka.pro/notes/prizhatyy-k-nizu-futer.html*/
 html {
     background-color:  white;
     font-family: Arial, sans-serif;
