--- a/web/css/style.css
+++ b/web/css/style.css
@@ -33,17 +33,23 @@ h1.titletext {
 
 .title, .title:visited {
     text-decoration: none;
-    color: navy;
+    color: blue;
 }
 
 .right {
     text-align: right;
 }
 
-.constColor.blue, .constColor.blue:visited {
+.constColor.blue, .constColor, .constColor.blue:visited, .constColor:visited {
     color: blue;
     padding: 0 1% 0 1%;
 }
+
+.constColor.nodecor, .constColor.blue.nodecor {
+    text-decoration: none;
+    padding: 0 5% 0 5%;
+}
+
 
 h2.menuhead {
     margin: 0;
@@ -108,11 +114,19 @@ textarea {
 .mainrow.right {
     text-align: right;
 }
+.mainrow.bold {
+    font-weight: bolder;
+}
+
 .constWid {
     word-wrap:break-word; 
     table-layout: fixed;
     overflow-x: auto;
-    width: 450px;
+    width: 550px;
+    text-align: justify;
+}
+.constWid.add {
+    width: 650px;
 }
 
 .addrow {
@@ -122,6 +136,20 @@ textarea {
     vertical-align: top;
 }
 
+
+.addrow.line {
+    text-decoration: underline;
+    margin: 0 5% 0 0;
+}
+
+.addrow.line.center, .addrow.center {
+    text-align: center;
+    width: 20%;
+}
+
+.addrow.right {
+    text-align: right;
+}
 
 
 .butSize {
