--- a/web/css/style.css
+++ b/web/css/style.css
@@ -8,22 +8,43 @@ and open the template in the editor.
     Author     : Alena.Grouk
 */
 /*http://verstka.pro/notes/prizhatyy-k-nizu-futer.html*/
-html {
+html, body {
     background-color:  white;
     font-family: Arial, sans-serif;
+    margin:0;
+    padding:0;
+    height:98%;
 }
 
-body {
-    padding: 1%;
-    min-width: 800px;
+#wrapper {
+    min-height:100%;
+    position:relative;
+    margin: 1%;
+    border: 1px solid darkgrey;
 }
 
 #header {
     background-color:  whitesmoke;
-    border: 1px solid darkgrey;
+    border-bottom: 1px solid darkgrey;
     min-height: 4%;
     text-align: left;
     padding: 1%;
+}
+
+#main {
+    padding: 1%;
+    padding-bottom:8%;   /* Height of the footer element */
+}
+
+#footer {
+    background-color:  whitesmoke;
+    border-top: 1px solid darkgrey;
+    text-align: center;
+    width:100%;
+    height:4%;
+    position:absolute;
+    bottom:0;
+    vertical-align: central;
 }
 
 h1.titletext {
@@ -65,18 +86,6 @@ textarea {
 
 .errors {
     color: red;
-}
-
-#main {
-    border: 1px solid darkgray;
-    min-height: 800px;  
-}
-
-#footer {
-    background-color:  whitesmoke;
-    border: 1px solid darkgrey;
-    min-height: 3%;
-    text-align: center;
 }
 
 .constColor.grey, .constColor.grey:visited {
