--- a/web/css/style.css
+++ b/web/css/style.css
@@ -14,6 +14,8 @@ html, body {
     margin:0;
     padding:0;
     height:98%;
+    min-height: 700px;
+    min-width: 900px;
 }
 
 #wrapper {
@@ -23,17 +25,30 @@ html, body {
     border: 1px solid darkgrey;
 }
 
+#content {
+    background-color: chartreuse;
+    width:100%;
+    height:96%;
+    position:absolute;
+    top:0;
+}
+
 #header {
     background-color:  whitesmoke;
     border-bottom: 1px solid darkgrey;
-    min-height: 4%;
+    height: 12%;
+    width: 100%;
     text-align: left;
-    padding: 1%;
+    position:absolute;
+    top:0;
 }
 
 #main {
-    padding: 1%;
-    padding-bottom:8%;   /* Height of the footer element */
+    background-color: appworkspace;
+    height: 88%;
+    width: 100%;
+    position:absolute;
+    top: 12%;
 }
 
 #footer {
@@ -46,6 +61,34 @@ html, body {
     bottom:0;
     vertical-align: central;
 }
+
+.menucontainer {
+    width: 20%;
+    background-color:  lightgrey;
+    padding: 1.5% 0.5% 3% 1%;
+    margin: 1%;
+    float: left;
+}
+
+.bodycontainer {
+    width: 70%;
+    border: 2px solid lightgrey;
+    padding: 2%;
+    margin: 1% 1% 1% 0;
+    float: right;
+    background-color:  white;
+    height: 88.5%;
+    position: relative;
+    overflow: auto;
+}
+/*
+.clear {
+    clear: both;
+    content: "";
+    display: table;
+}*/
+
+
 
 h1.titletext {
     margin: 1% 1% 0 1%;
@@ -92,13 +135,7 @@ textarea {
     color: silver;
 }
 
-.menucontainer {
-    width: 20%;
-    background-color:  lightgrey;
-    padding: 1.5% 0.5% 3% 1%;
-    margin: 1%;
-    float: left;
-}
+
 
 .menuheader {
     background-color:  darkgray;
@@ -110,6 +147,7 @@ textarea {
     margin: 4% 3% 0 15%;
     padding: 2% 4% 8% 2%;
 }
+
 
 .newstable {
     width: 100%;
@@ -174,14 +212,7 @@ textarea {
     text-align: right;
 }
 
-.bodycontainer {
-    width: 70%;
-    border: 2px solid lightgrey;
-    padding: 2%;
-    margin: 1% 1% 1% 0;
-    float: right;
-    background-color:  white;
-}
+
 .rigthcontainer {
     width: 20%;
     padding: 2%;
