--- a/web/css/style.css
+++ b/web/css/style.css
@@ -26,9 +26,9 @@ html, body {
 }
 
 #content {
-    background-color: chartreuse;
+    /*background-color: chartreuse;*/
     width:100%;
-    height:96%;
+    height:97%;
     position:absolute;
     top:0;
 }
@@ -44,7 +44,7 @@ html, body {
 }
 
 #main {
-    background-color: appworkspace;
+    /*background-color: appworkspace;*/
     height: 88%;
     width: 100%;
     position:absolute;
@@ -56,10 +56,13 @@ html, body {
     border-top: 1px solid darkgrey;
     text-align: center;
     width:100%;
-    height:4%;
+    height:3%;
     position:absolute;
     bottom:0;
-    vertical-align: central;
+}
+
+.footertext {
+    vertical-align: middle;
 }
 
 .menucontainer {
@@ -71,9 +74,9 @@ html, body {
 }
 
 .bodycontainer {
-    width: 70%;
+    width: 72%;
     border: 2px solid lightgrey;
-    padding: 2%;
+    padding: 2% 0 2% 2%;
     margin: 1% 1% 1% 0;
     float: right;
     background-color:  white;
@@ -88,16 +91,32 @@ html, body {
     display: table;
 }*/
 
+.titlecontainer {
+    width: 60%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
 
+.engcontainer {
+    width: 40%;
+    text-align: right;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    margin: 1% 5% 1% 5%;
+}
 
 h1.titletext {
-    margin: 1% 1% 0 1%;
-    padding-left: 2%;
+    padding-left: 10%;
+    vertical-align: central;
+    margin-bottom: 0;
 }
 
 .title, .title:visited {
     text-decoration: none;
     color: blue;
+    vertical-align: bottom;
 }
 
 .right {
@@ -151,12 +170,12 @@ textarea {
 
 .newstable {
     width: 100%;
-    padding: 8px; 
+    padding: 1%; 
 }
 
 .mainrow {
-    width: 60%;
-    padding: 8px; 
+    width: 58%;
+    padding: 1%; 
 }
 .mainrow.right {
     text-align: right;
@@ -173,14 +192,15 @@ textarea {
     text-align: justify;
 }
 .constWid.add {
-    width: 650px;
+    width: 630px;
 }
 
 .addrow {
-    width: 40%;
+    width: 42%;
+    min-width: 120px;
     text-align: left;
-    padding: 8px; 
     vertical-align: top;
+    padding: 1%; 
 }
 
 
@@ -191,7 +211,7 @@ textarea {
 
 .addrow.line.center, .addrow.center {
     text-align: center;
-    width: 20%;
+    width: 21%;
 }
 
 .addrow.right {
@@ -200,7 +220,7 @@ textarea {
 
 
 .butSize {
-    width: 100px;
+    min-width: 100px;
 }
 
 
